// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component Snapshot Propsあり_レイアウト横 1`] = `
<DocumentFragment>
  <div
    class="bm-c-alert bm-base bm-content-base -horizontal -centered -icon-right"
  >
    <div
      class="bm-c-alert__inner"
    >
      <div
        class="bm-c-alert__icon"
      >
        <div>
          icon
        </div>
      </div>
      <div
        class="bm-e-alert-content bm-text-base bm-c-alert__detail"
      >
        <h2>
          <strong>
            title
          </strong>
        </h2>
        <div
          class="bm-e-alert-content__spacer"
        />
        <div
          class="bm-e-alert-content__footer"
        >
          <div>
            footer
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component Snapshot Propsあり_レイアウト縦_中央揃えあり 1`] = `
<DocumentFragment>
  <div
    class="bm-c-alert bm-base bm-content-base -vertical -centered -icon-right"
  >
    <div
      class="bm-c-alert__inner"
    >
      <div
        class="bm-c-alert__icon"
      >
        <div>
          icon
        </div>
      </div>
      <div
        class="bm-e-alert-content bm-text-base bm-c-alert__detail -centered"
      >
        <h2>
          <strong>
            title
          </strong>
        </h2>
        <div
          class="bm-e-alert-content__spacer"
        />
        <div
          class="bm-e-alert-content__footer"
        >
          <div>
            footer
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component Snapshot Propsあり_レイアウト縦_中央揃えなし 1`] = `
<DocumentFragment>
  <div
    class="bm-c-alert bm-base bm-content-base -vertical -icon-right"
  >
    <div
      class="bm-c-alert__inner"
    >
      <div
        class="bm-c-alert__icon"
      >
        <div>
          icon
        </div>
      </div>
      <div
        class="bm-e-alert-content bm-text-base bm-c-alert__detail"
      >
        <h2>
          <strong>
            title
          </strong>
        </h2>
        <div
          class="bm-e-alert-content__spacer"
        />
        <div
          class="bm-e-alert-content__footer"
        >
          <div>
            footer
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component Snapshot Propsなし 1`] = `
<DocumentFragment>
  <div
    class="bm-c-alert bm-base bm-content-base -horizontal -icon-left"
  >
    <div
      class="bm-c-alert__inner"
    >
      <div
        class="bm-e-alert-content bm-text-base bm-c-alert__detail"
      />
    </div>
  </div>
</DocumentFragment>
`;
